--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -17,10 +17,10 @@
 5: Then enter username and passward.
 ### Error Occurance (Issue Faced):
 . After powering up, display black screen with some error.
-. ![alt Error]()
+. ![alt Error](Error.png)
 ### Error Solved (Problem Solved):
 . Go to Setting < change the display graphic in VBoxVGA
-.
+.![alt Error Solved](ErrorSolved.png)
 
 
 
