--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -1,3 +1,4 @@
+### Day - 1
 ### Difference between Linux and Windows 
 **Features           | Differences
  1: **Open Source**  | Linux are open source operating system but Windows are not open source operating system 
@@ -21,6 +22,8 @@
 ### Error Solved (Problem Solved):
 . Go to Setting < change the display graphic in VBoxVGA
 .![alt Error Solved](ErrorSolved.png)
+
+### Day - 2
 
 
 
