--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -2,7 +2,7 @@
 ### Difference between Linux and Windows 
 **Features           | Differences
  1: **Open Source**  | Linux are open source operating system but Windows are not open source operating system 
-2: ** Cost**         | Linux is free of cost but Windows are not free of cost 
+2: **Cost**         | Linux is free of cost but Windows are not free of cost 
 3: **Preferrence**   | Linux is more preferred and used by hackers and Security Experts but Windows is not preferred by hackers. 
 4: **Security**      | Linux is More secure with better user control and fewer vulnerabilities but Windows Less secure due to higher susceptibility to malware and viruses.
 5: **Compatibility** | Linux can have two files with the same name but different cases but Windows are not 
@@ -20,7 +20,7 @@
 . After powering up, display black screen with some error.
 . ![alt Error](Error.png)
 ### Error Solved (Problem Solved):
-. Go to Setting < change the display graphic in VBoxVGA
+. Go to Setting > change the display graphic in VBoxVGA .
 .![alt Error Solved](ErrorSolved.png)
 
 ### Day - 2
