--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -1,11 +1,15 @@
 ### Day - 1
+**First of all we discussed about different types of companies.
+### Product based companies
+### Serviced based companies
+.Then we learned about differences that are present in which like product based companies that have their own product but serviced based companies may or may not be have their own products but their primary business is service they works for other organization.
 ### Difference between Linux and Windows 
 **Features           | Differences
  1: **Open Source**  | Linux are open source operating system but Windows are not open source operating system 
 2: **Cost**         | Linux is free of cost but Windows are not free of cost 
 3: **Preferrence**   | Linux is more preferred and used by hackers and Security Experts but Windows is not preferred by hackers. 
-4: **Security**      | Linux is More secure with better user control and fewer vulnerabilities but Windows Less secure due to higher susceptibility to malware and viruses.
-5: **Compatibility** | Linux can have two files with the same name but different cases but Windows are not 
+4: **Security**      | Linux is More secure with better user control and  but Windows Less secure due to higher susceptibility to malware and viruses.
+5: **Compatibility** | Linux can have two files with the same name but different cases but Windows are not
 ### 2 : **Download Three Softwares
 1: ![Oracle Virtual Machine](https://download.virtualbox.org/virtualbox/7.1.10/VirtualBox-7.1.10-169112-Win.exe)
 2: ![Microsof Visual C++](https://download.visualstudio.microsoft.com/download/pr/40b59c73-1480-4caf-ab5b-4886f176bf71/D62841375B90782B1829483AC75695CCEF680A8F13E7DE569B992EF33C6CD14A/VC_redist.x64.exe)
