Update DAY 1,2 25-5-2025.md

--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -27,8 +27,75 @@
 . Go to Setting > change the display graphic in VBoxVGA .
 .![alt Error Solved](ErrorSolved.png)
 
-### Day - 2
-1:
+### Day - 2 ( Introduction of core component of OS and Basic Command)
+1:**first of all today ,learened about Booting.
+### What is Booting?
+### Ans - Booting is the process of starting a computer and loading the operating system.
+### Process of booting
+1: The computer's BIOS or UEFI firmware intializes the hardware.
+2: The BIOS/UEFI detects the boot device (eg. Hard drive or USB device)
+3: The boot loader(eg. Windows boot Manager) is loaded into memory
+### Types of booting
+### COld boot/Hard BOOT
+Starting a Computer froma  powered-off state.
+### Warm Booting/Soft booting
+. Restarting a computer without powering it off (eg. using the restart option)
+### What is Kernel?
+ Ans - The Kernel is a computer program that is core of computer's  operating system,Resposible for working with Hardware.
+ . Example - It is like a Chef working in Kitchen that give you ,your order (output) but you can't see the chef.
+ ### Shell ?
+ Ans - Shell is a program that provides a way for users to interact with OS.
+ ### Types of Shell
+ 1: Bash = (Most comman shell in linux)
+ 2:Sh = (original Shell)
+ 3:Zsh = (Unix Shell,used in terminal)
+ 4:fish = (it user-friendly from the start)
+ ### Categories of Shell
+ . Command line Shell 
+ 
+ . Graphics Shell
+
+### File System Structures
+Name      |    Features
+ /        |  The slash / character denotes the root of the file system tree. (trunk of tree)
+ /home    |   contain all the personal directories of user
+ /bin     |   directories contains user executable file 
+ /lib     |   contain shell libraries
+ /boot    |   contain all the file that required for booting
+ /dev     |   contain hardware and development file
+ /media   |   mount points for remove media
+ /mnt     |   temporary mounted filesystem
+ /opt     |   contain optional file
+ /var     |   contain variable data 
+ ### Commands  
+ ls (list) : contents of folder in which it runs
+ pwd : print the current working dictionary
+ touch : create file without content
+ cat : create a file with content 
+
+ cd : create a dictionary
+ echo : print a text
+ cp : copies of file from one location to other
+ nano : edit the file from command line
+ date : return current date
+
+ whoami :  return the current domain and user name
+ whereis : find the location of file
+ whatis : give short description of a command
+ mkdir : make dictionary
+ rmdir : remove dictionary
+        
+        
+        
+        
+        
+        
+        
+ 
+
+ 
+ 
+
 
 
 
