--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -51,10 +51,9 @@ Starting a Computer froma  powered-off state.
  3:Zsh = (Unix Shell,used in terminal)
  4:fish = (it user-friendly from the start)
  ### Categories of Shell
- . Command line Shell 
+ . Command line Shell : is a text based interface where you types commands to tell the computer to what to do by using keyboard'
+ . Graphics Shell: ia user interface where you interact with computer using picture,icons,menu by using mouse.
  
- . Graphics Shell
-
 ### File System Structures
 Name      |    Features
  /        |  The slash / character denotes the root of the file system tree. (trunk of tree)
@@ -72,18 +71,19 @@ Name      |    Features
  pwd : print the current working dictionary
  touch : create file without content
  cat : create a file with content 
-
+ ![alt command](command.png)
  cd : create a dictionary
  echo : print a text
  cp : copies of file from one location to other
  nano : edit the file from command line
  date : return current date
-
- whoami :  return the current domain and user name
+whoami :  return the current domain and user name
+![alt Command2](Command2.png)
  whereis : find the location of file
  whatis : give short description of a command
  mkdir : make dictionary
  rmdir : remove dictionary
+ ![alt Command3](Command3.png)
         
         
         
