--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -71,7 +71,7 @@ Name      |    Features
  pwd : print the current working dictionary
  touch : create file without content
  cat : create a file with content 
- ![alt command](command.png)
+ ![alt Command](Command1.jpg)
  cd : create a dictionary
  echo : print a text
  cp : copies of file from one location to other
