--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -78,12 +78,12 @@ Name      |    Features
  nano : edit the file from command line
  date : return current date
 whoami :  return the current domain and user name
-![alt Command2](Command2.png)
+![alt Command4](Command4.jpg)
  whereis : find the location of file
  whatis : give short description of a command
  mkdir : make dictionary
  rmdir : remove dictionary
- ![alt Command3](Command3.png)
+ ![alt Command5](Command5.jpg)
         
         
         
