--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -4,12 +4,14 @@
 ### Serviced based companies
 .Then we learned about differences that are present in which like product based companies that have their own product but serviced based companies may or may not be have their own products but their primary business is service they works for other organization.
 ### Difference between Linux and Windows 
+
 **Features           | Differences
- 1: **Open Source**  | Linux are open source operating system but Windows are not open source operating system 
-2: **Cost**         | Linux is free of cost but Windows are not free of cost 
-3: **Preferrence**   | Linux is more preferred and used by hackers and Security Experts but Windows is not preferred by hackers. 
-4: **Security**      | Linux is More secure with better user control and  but Windows Less secure due to higher susceptibility to malware and viruses.
-5: **Compatibility** | Linux can have two files with the same name but different cases but Windows are not
+_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _  _ _ _ _  _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
+ 1: **Open Source**  | Linux are open source operating system but Windows are not open source operating system |
+2: **Cost**         | Linux is free of cost but Windows are not free of cost|
+3: **Preferrence**   | Linux is more preferred and used by hackers and Security Experts but Windows is not preferred by hackers|
+4: **Security**      | Linux is More secure with better user control and  but Windows Less secure due to higher susceptibility to malware and viruses|
+5: **Compatibility** | Linux can have two files with the same name but different cases but Windows are not|
 ### 2 : **Download Three Softwares
 1: ![Oracle Virtual Machine](https://download.virtualbox.org/virtualbox/7.1.10/VirtualBox-7.1.10-169112-Win.exe)
 2: ![Microsof Visual C++](https://download.visualstudio.microsoft.com/download/pr/40b59c73-1480-4caf-ab5b-4886f176bf71/D62841375B90782B1829483AC75695CCEF680A8F13E7DE569B992EF33C6CD14A/VC_redist.x64.exe)
@@ -33,7 +35,9 @@
 ### Ans - Booting is the process of starting a computer and loading the operating system.
 ### Process of booting
 1: The computer's BIOS or UEFI firmware intializes the hardware.
+
 2: The BIOS/UEFI detects the boot device (eg. Hard drive or USB device)
+
 3: The boot loader(eg. Windows boot Manager) is loaded into memory
 ### Types of booting
 ### COld boot/Hard BOOT
@@ -48,9 +52,13 @@ Starting a Computer froma  powered-off state.
  Ans - Shell is a program that provides a way for users to interact with OS.
  ### Types of Shell
  1: Bash = (Most comman shell in linux)
+ 
  2:Sh = (original Shell)
+ 
  3:Zsh = (Unix Shell,used in terminal)
+ 
  4:fish = (it user-friendly from the start)
+ 
  ### Categories of Shell
  . Command line Shell : is a text based interface where you types commands to tell the computer to what to do by using keyboard'
  
@@ -58,32 +66,44 @@ Starting a Computer froma  powered-off state.
  
 ### File System Structures
 Name      |    Features
- /        |  The slash / character denotes the root of the file system tree. (trunk of tree)
- /home    |   contain all the personal directories of user
- /bin     |   directories contains user executable file 
- /lib     |   contain shell libraries
- /boot    |   contain all the file that required for booting
- /dev     |   contain hardware and development file
- /media   |   mount points for remove media
- /mnt     |   temporary mounted filesystem
- /opt     |   contain optional file
- /var     |   contain variable data 
+_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
+ /        |  The slash / character denotes the root of the file system tree. (trunk of tree)|
+ /home    |   contain all the personal directories of user|
+ /bin     |   directories contains user executable file| 
+ /lib     |   contain shell libraries|
+ /boot    |   contain all the file that required for booting|
+ /dev     |   contain hardware and development file|
+ /media   |   mount points for remove media|
+ /mnt     |   temporary mounted filesystem|
+ /opt     |   contain optional file|
+ /var     |   contain variable data |
  ### Commands  
  ls (list) : contents of folder in which it runs
+ 
  pwd : print the current working dictionary
+ 
  touch : create file without content
+ 
  cat : create a file with content 
+ 
  ![alt Command](Command1.jpg)
  cd : create a dictionary
+ 
  echo : print a text
  cp : copies of file from one location to other
+ 
  nano : edit the file from command line
+ 
  date : return current date
+ 
 whoami :  return the current domain and user name
 ![alt Command4](Command4.jpg)
  whereis : find the location of file
+
  whatis : give short description of a command
+ 
  mkdir : make dictionary
+ 
  rmdir : remove dictionary
  ![alt Command5](Command5.jpg)
         
