--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -8,9 +8,13 @@
 **Features           | Differences
 _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _  _ _ _ _  _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
  1: **Open Source**  | Linux are open source operating system but Windows are not open source operating system |
+ 
 2: **Cost**         | Linux is free of cost but Windows are not free of cost|
+
 3: **Preferrence**   | Linux is more preferred and used by hackers and Security Experts but Windows is not preferred by hackers|
+
 4: **Security**      | Linux is More secure with better user control and  but Windows Less secure due to higher susceptibility to malware and viruses|
+
 5: **Compatibility** | Linux can have two files with the same name but different cases but Windows are not|
 ### 2 : **Download Three Softwares
 1: ![Oracle Virtual Machine](https://download.virtualbox.org/virtualbox/7.1.10/VirtualBox-7.1.10-169112-Win.exe)
@@ -65,18 +69,27 @@ Starting a Computer froma  powered-off state.
  . Graphics Shell: ia user interface where you interact with computer using picture,icons,menu by using mouse.
  
 ### File System Structures
-Name      |    Features
+|Name      |    Features
 _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
- /        |  The slash / character denotes the root of the file system tree. (trunk of tree)|
- /home    |   contain all the personal directories of user|
- /bin     |   directories contains user executable file| 
- /lib     |   contain shell libraries|
- /boot    |   contain all the file that required for booting|
- /dev     |   contain hardware and development file|
- /media   |   mount points for remove media|
- /mnt     |   temporary mounted filesystem|
- /opt     |   contain optional file|
- /var     |   contain variable data |
+| /        |  The slash / character denotes the root of the file system tree. (trunk of tree) |
+ 
+| /home    |   contain all the personal directories of user|
+ 
+| /bin     |   directories contains user executable file| 
+ 
+| /lib     |   contain shell libraries|
+ 
+| /boot    |   contain all the file that required for booting|
+ 
+| /dev     |   contain hardware and development file|
+ 
+| /media   |   mount points for remove media|
+
+ |/mnt     |   temporary mounted filesystem
+ 
+  |/opt     |   contain optional file|
+ 
+| /var     |   contain variable data |
  ### Commands  
  ls (list) : contents of folder in which it runs
  
