--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -119,17 +119,119 @@ whoami :  return the current domain and user name
  
  rmdir : remove dictionary
  ![alt Command5](Command5.jpg)
-        
-        
-        
-        
-        
-        
-        
- 
+
+ ### DAY - 3
+### Bare Metal installation 
+
+1 Bare metal installation directly using USB (pen drive)
+
+2. Direct installation in ccomputer hardware
+
+### Partitioning schemes
+1. divide a Hard Disk into separate division.
+
+2. Each Section acts like a independent disk.
+
+### Types
+     /   \
+    (MBR) (GBT)     
+|______________________|      |GUID Partition table|
+
+| Older,Used with BIOS|      |Support 128 + Partition|     
+
+|Less flexible|              |MOre  flexible |      
+
+|supports upto 2 TB|         |Newer Used with UEFI| 
+
+|Max 4 Primary Partition|    |Works with disks>2 TB |                   
+
+### File and Dictionary Permission
+       |___________|
+       |  Users    |
+       |___________|
+       /      |     \
+    Owner    Group   Other
+
+       |____________|            
+       | Permission |
+       |____________|            
+       /     |       \
+    read   Write     Execute
+
+ ### Types of command
+. change mod (chmod): To change the file permission.
+ge b
+. Syntax - chmod + x filename.sh (give permission to run the script)
+
+. chmod 444: chmod 444 myself.sh  ( permission to read only for everywhere)
+. ![alt command](command.png)
+
+. chmod 644 (Permission to only owner)
+
+ 2. chown: (Change the owner and group owner of file directories)
+
+. Syntax: chown user:group file .txt
+. ![alt command2](command2.png)
+
+. Result 
+![alt command23](command23.png)
+
+. Permission: only the root and the current owner change the ownership using owner. change the group assoiciated with file and dictionary.
+
+### Redirection
+. Allow you to change input or ouput of command.
+
+. Echo hello > day3.txt
+
+. Redirect the message from hello to day3.txt 
+
+. Operations - >(standard  output), >> < (standard input)
+
+### Pipes
+. Take output from one command and pass it to another command.
+
+. Particular file in folder.
+
+. Example: You have many fies in folder but you want only file that ends with .sh
+
+### Types 
+
+. pipes are two types
+
+1 unnamed pipes - created using pipe()
+
+2. Named pipes - special file created with mkfifo and can be used for releated communication
+
+### Shell Program
+
+1. Use of Variable
+
+ input
+![alt variable](variable.png)
+
+output
+![alt variable1](variable1.png)
+
+ ### Multiplication of any number
+
+. input
+![alt mult](mult.png)
+
+. Output
+![alt mult2](mult2.png)
+
+### Comparision of two numbers
+
+. input
+![alt comparision](comparision)
+
+. Output
+![alt comparision](comparision2)
+
+
 
  
- 
+    
 
 
 
