--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -223,7 +223,7 @@ output
 ### Comparision of two numbers
 
 . input
-![alt comparision](comparision)
+![alt comparision](comparsion)
 
 . Output
 ![alt comparision2](comparision2)
