--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -223,10 +223,10 @@ output
 ### Comparision of two numbers
 
 . input
-![alt comparision](comparsion)
+![alt comparision](comparison.png)
 
 . Output
-![alt comparision2](comparision2)
+![alt comparision2](comparision2.png)
 
 
 
