--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -228,7 +228,13 @@ output
 . Output
 ![alt comparision2](comparision2.png)
 
+### DAY - 4 
 
+### File Compression Through Command
+
+File compression is the process of reducing the size of file or directories using command line tool like gzip with compression.
+
+![alt filecompress](filecompress.png)
 
  
     
