--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -232,12 +232,291 @@ output
 
 ### File Compression Through Command
 
-File compression is the process of reducing the size of file or directories using command line tool like gzip with compression.
+File compression is the process of reducing the size of a file or group of files by encoding the data more efficiently. This is done to save storage space, reduce transmission time over the internet, and make file management easier.
 
-![alt filecompress](filecompress.png)
+### Key Points:
+### Purpose
 
- 
-    
+. Save Storage space: Save space, speed up file transfer, or organize multiple files.
+
+ . Faster Transmission: Smaller files transfer more quickly over networs , reducing upload and download times.
+
+### GZIP (GNU Zip)
+
+. GZip is a tool that makes files smaller so they take up less space and are faster to send or download,without reducing its size without losing any data.. It creates files with a .gz ending and is mostly used on Linux system.
+
+Syntax: gzip filename.txt
+
+. This command will compress and Creates a new file filename.txt.gz and deletes the original filename . 
+### Decompress a file:
+
+. To decompose the file, can use  gunzip command which is equivalent.
+
+. gunzip filename.txt.gz
+
+This will decompose the file  remove the .gz extension, restoring the original file.
+
+### Keep the original file
+
+. To compress the file and keep the original ,use -k option.
+
+. gzip -k file.txt
+
+. This will create a file without without deleting the original file.
+
+![alt filegzip](filegzip.png)
+
+### Wildcards
+
+🔹 Definition of Wildcards:
+Wildcards in Linux are special characters used in the command line to represent one or more characters in filenames or directory names. They allow users to work with multiple files at once without typing each name individually.
+
+🔹 Example:  ls *.txt
+
+✅ Common Commands with Wildcards
+rm *.log               # Remove all .log files
+
+cp *.jpg images/       # Copy all jpg files to images folder
+
+mv report?.txt old/    # Move report1.txt, report2.txt, etc., to old
+
+| Wildcard  | Description                              | Example          |
+| --------- | ---------------------------------------- | ---------------- |
+| `*`       | Zero or more characters                  | `*.txt`          |
+| `?`       | Exactly one character                    | `file?.txt`      |
+| `[...]`   | Any one character from set/range         | `file[1-3].txt`  |
+| `[!...]`  | Any one character **not** in set         | `file[!0-9].txt` |
+| `{a,b,c}` | Matches any listed string (brace expand) | `file{1,2}.txt`  |
+| `{1..5}`  | Range expansion                          | `file{1..5}.txt` |
+
+### Asssignment (Question)
+
+### Escaping Character in linux (Shell)
+
+In Linux, escaping characters means preventing the shell from interpreting special characters. This is essential when dealing with wildcards, variables, spaces, quotes, and other symbols.
+
+###  Why Escape Characters?
+Because the shell interprets certain characters specially:
+
+*, ?, |, &, <, >, $, ", ', \, etc.
+
+Escaping tells the shell: "Treat this as a literal character, not a command or pattern.
+
+### Comman Escape Method
+
+| Escape Method | Effect                           | Example                       |
+| ------------- | -------------------------------- | ----------------------------- |
+| `\`           | Escapes next character           | `echo \$HOME` → `$HOME`       |
+| `'...'`       | Everything literal               | `'*.txt'` → `*.txt`           |
+| `"..."`       | Allows vars, escapes most others | `"Hello $USER"`               |
+| `\` (newline) | Continue command on next line    | `echo "Hello \` → next line\` |
+
+### Example
+
+🔹 1. Escaping a Space in a Filename
+
+. touch MyFile.txt 
+
+ls MyFile.txt       
+
+🔹 2. Escaping a Dollar Sign ($)
+
+. echo \$HOME     
+
+### Quoting in linux
+
+Quoting in Linux (specifically in the shell, like bash) is essential for controlling how the shell interprets special characters like spaces, $, *, &, etc. There are three main types of quoting
+
+1. Single Quotes (')
+
+Purpose: Preserves the literal value of every character inside the quotes.
+
+Example: input
+
+echo 'This is $HOME and $(ls)' 
+
+output : This is $HOME and $(ls)
+
+2. Double Quotes (")
+
+Purpose: Preserves most characters literally except $, `, \, and ! (in some shells).
+
+3. Backslash (\)
+
+Purpose: Escapes a single character, telling the shell to treat it literally.
+
+Input : echo \$HOME
+
+Output: $HOME
+
+### Practical Comperission
+
+| Expression            | What it does                   |
+| --------------------- | ------------------------------ |
+| `'Hello $USER'`       | Prints literal string          |
+| `"Hello $USER"`       | Expands variable               |
+| `echo Hello\ World`   | Escapes the space character    |
+| `echo "Files: $(ls)"` | Substitutes the output of `ls` |
+
+### Hardware
+### Defination: Hardware refers to the physical components of a computer or any electronic system. These are the tangible parts you can touch and see, as opposed to software, which consists of programs and data.
+
+### What is Computer Hardware?
+
+It includes everything from the central processing unit (CPU) inside the computer to the monitor, keyboard, mouse, and storage devices.
+
+Essentially, computer hardware is the machinery that runs software and lets you interact with the computer.
+
+### Basic computer Hardware Components
+
+| Component                   | What It Does                                                    |
+| --------------------------- | --------------------------------------------------------------- |
+| **CPU (Processor)**         | The brain of the computer, processes instructions and data      |
+| **Motherboard**             | The main circuit board connecting all components                |
+| **RAM (Memory)**            | Temporary storage that the CPU uses to quickly access data      |
+| **Hard Drive / SSD**        | Long-term storage for files, programs, and the operating system |
+| **Power Supply Unit (PSU)** | Converts electricity to power the computer                      |
+| **Input Devices**           | Devices like keyboard, mouse, scanner used to input data        |
+| **Output Devices**          | Devices like monitor, printer used to display or produce output |
+| **Graphics Card (GPU)**     | Handles images, video, and graphics processing                  |
+
+### Motherboard
+
+### What is a Motherboard?
+
+. It’s a large flat board inside the computer that connects and allows communication between all the other hardware components.
+
+. It holds the CPU, memory (RAM), storage connections, and expansion cards.
+
+. It also provides connectors for input/output devices like USB ports, audio jacks, and network cables.
+
+![alt motherboard](motherboard.jpg)
+
+### Key Functions of a Motherboard:
+
+. Connects all parts: CPU, RAM, hard drives, graphics card, and other devices.
+
+. Distributes power: Supplies power to different components via the power supply.
+
+. Communication hub: Allows different parts to communicate and work together.
+
+. Expansion slots: Lets you add extra components like graphic cards or sound cards.
+
+### Components on a Motherboard:
+
+1 CPU Socket:
+
+The slot where the processor (CPU) is installed.
+
+It connects the CPU to the rest of the system.
+
+2 RAM Slots (Memory Slots):
+
+Slots where RAM (memory) modules are inserted.
+
+These provide the computer with fast, temporary memory.
+
+3 Chipset:
+
+Controls communication between the CPU, RAM, storage devices, and peripherals.
+
+Often divided into Northbridge (handles high-speed devices like CPU and RAM) and Southbridge (handles slower peripherals like USB, audio).
+
+4 Power Connectors:
+
+Connect the motherboard to the power supply unit (PSU) to provide power.
+
+Usually includes a large 24-pin connector and additional CPU power connectors.
+
+5 PCI / PCI Express (PCIe) Slots:
+
+Expansion slots for adding hardware like graphics cards, sound cards, or network cards.
+
+6 Storage Connectors (SATA Ports):
+
+Connectors for hard drives (HDDs), solid-state drives (SSDs), and optical drives.
+
+7 BIOS / UEFI Chip: 
+
+Firmware chip that helps start the computer and manage hardware before the operating system loads.
+
+8 Input/Output (I/O) Ports:
+
+External connectors on the back of the motherboard for devices like:
+
+9 USB devices:
+
+Ethernet (network) cables
+
+Audio jacks
+
+Video outputs (HDMI, DisplayPort)
+
+CMOS Battery
+
+A small battery that powers the motherboard’s memory for BIOS settings even when the computer is off.
+
+### Power Supply in Hardware
+
+A power supply unit (PSU) is a crucial hardware component that provides electrical power to other components in an electronic system or computer.
+
+### Key Functions:
+
+1. Convert AC to DC: Most hardware devices run on DC power, but the wall outlet provides AC. The PSU converts this AC power into stable DC voltages.
+
+2. Regulate Voltage: It ensures the voltage is constant and within safe limits for the hardware.
+
+3. Distribute Power: Supplies different voltages (e.g., +12V, +5V, +3.3V) to various hardware components like the CPU, motherboard, drives, 
+
+### Cache Memory:
+
+Cache memory is a small, high-speed memory located close to or inside the CPU (Central Processing Unit). It stores frequently used data and instructions so the CPU can access them faster than fetching from the main RAM (which is slower in comparison).
+
+🔍 Why Cache Memory is Important: 
+
+. CPU is much faster than RAM — so if the CPU had to wait for data from RAM every time, it would slow down.
+
+. Cache stores recently used or frequently accessed data.
+
+. Reduces latency and increases processing speed.
+
+⚙️ How It Works :
+. CPU requests data.
+
+. Checks L1 → if found, this is a cache hit (very fast).
+
+. If not in L1, checks L2, then L3.
+
+. If not in any cache → fetches from main RAM (slowest — cache miss).
+
+. Once fetched, data is stored in the cache for future use.
+
+### Difference between Cache and RAM memory
+
+| Feature            | **Cache Memory**                                                     | **RAM (Main Memory)**                        |
+| ------------------ | -------------------------------------------------------------------- | -------------------------------------------- |
+| **Location**       | Inside or very close to the CPU                                      | On the motherboard, connected to the CPU     |
+| **Speed**          | Extremely fast (faster than RAM)                                     | Fast, but slower than cache                  |
+| **Size**           | Very small (KBs to tens of MBs)                                      | Much larger (GBs)                            |
+| **Cost per MB**    | High                                                                 | Lower                                        |
+| **Type of Memory** | SRAM (Static RAM)                                                    | DRAM (Dynamic RAM)                           |
+| **Purpose**        | Temporarily stores frequently accessed data/instructions for the CPU | Stores all active programs and data in use   |
+| **Access by CPU**  | Direct and automatic                                                 | Requires memory controller to access         |
+| **Volatility**     | Volatile (data lost when power is off)                               | Volatile (same)                              |
+| **Managed by**     | Hardware (CPU decides what goes in cache)                            | Operating System (allocates RAM to programs) |
+| **Example Size**   | L1: 64 KB, L2: 512 KB, L3: 8 MB                                      | 4 GB, 8 GB, 16 GB, etc.                      |
+
+ ### Difference between RAM and Harddisk
+
+ | Feature         | **RAM (Random Access Memory)**                                    | **Hard Disk (HDD/SSD)**                                             |
+| --------------- | ----------------------------------------------------------------- | ------------------------------------------------------------------- |
+| **Function**    | Temporary memory used by the system to run programs and processes | Permanent storage for files, applications, and the operating system |
+| **Volatility**  | Volatile – data is lost when the computer is turned off           | Non-volatile – data remains even when the power is off              |
+| **Speed**       | Very fast (nanoseconds)                                           | Slower (milliseconds), though SSDs are faster than HDDs             |
+| **Capacity**    | Typically 4GB to 64GB (depends on usage)                          | Typically 256GB to several terabytes                                |
+| **Usage**       | Acts as a workspace for the CPU to process data                   | Stores data long-term, like documents, software, and system files   |
+| **Cost per GB** | More expensive                                                    | Less expensive                                                      |
+  
 
 
 
