--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -517,10 +517,272 @@ Cache memory is a small, high-speed memory located close to or inside the CPU (C
 | **Usage**       | Acts as a workspace for the CPU to process data                   | Stores data long-term, like documents, software, and system files   |
 | **Cost per GB** | More expensive                                                    | Less expensive                                                      |
   
+### DAY - 5
 
+### Comman Issues and problems in pc and their Solutions.
 
+🎮 What Is a GPU?
+A GPU is responsible for rendering images, video, and animations. It’s essential for gaming, video editing, 3D rendering, and sometimes AI/machine learning tasks.
 
+⚠️ Common GPU Problems and Issues
+1. No Display / Black Screen
+Causes:
 
+Improper GPU seating in the PCIe slot
+
+Faulty GPU or power supply
+
+Dead HDMI/DisplayPort cable
+
+Solutions:
+
+Reseat the GPU
+
+Try a different output port or cable
+
+Test on another monitor
+
+2. Screen Artifacts / Glitches
+Causes:
+
+Overheating
+
+Overclocking gone wrong
+
+Driver or VRAM issues
+
+Solutions:
+
+Revert overclock settings
+
+Clean dust from GPU
+
+Update or reinstall GPU drivers
+
+3. Driver Crashes / “Display Driver Stopped Responding”
+Causes:
+
+Incompatible or outdated drivers
+
+System instability
+
+Solutions:
+
+Use DDU (Display Driver Uninstaller) to remove old drivers
+
+Reinstall the latest drivers from NVIDIA, AMD, or Intel
+
+ ### PCU
+ 🎮 What Is a GPU?
+A GPU is responsible for rendering images, video, and animations. It’s essential for gaming, video editing, 3D rendering, and sometimes AI/machine learning tasks.
+
+⚠️ Common GPU Problems and Issues
+1. No Display / Black Screen
+Causes:
+
+Improper GPU seating in the PCIe slot
+
+Faulty GPU or power supply
+
+Dead HDMI/DisplayPort cable
+
+Solutions:
+
+Reseat the GPU
+
+Try a different output port or cable
+
+Test on another monitor
+
+2. Screen Artifacts / Glitches
+Causes:
+
+Overheating
+
+Overclocking gone wrong
+
+Driver or VRAM issues
+
+Solutions:
+
+Revert overclock settings
+
+Clean dust from GPU
+
+Update or reinstall GPU drivers
+
+3. Driver Crashes / “Display Driver Stopped Responding”
+Causes:
+
+Incompatible or outdated drivers
+
+System instability
+
+Solutions:
+
+Use DDU (Display Driver Uninstaller) to remove old driver.
+
+### PCU (Personal Computer Unit)
+
+A Personal Computer Unit refers to the complete physical system of a computer, which includes all the essential hardware components needed to process data, run software, and perform computing tasks for individual users.
+
+### Installation & Hard Disk Preparation:
+Partitioning: The first step of Partitinong is to organize the hard disk into:
+
+Primary (C: Drive):Where the Operating System (Windows/Linux/Unix) is installed.
+
+Avoid storing personal/important files in C:
+If Windows crashes, files in D:, E:, F: are safer and can often be recovered.
+
+Logical Drives (D:, E:, F:): Used for pictures, videos, documents, etc.
+
+Speed slow (Causes & Fixes):
+Desktop: Files should be on drive. By default files on desktop are stored on C drive. As OS system is installed in C: file, its recomended to not put many folders in Desktop. Move them into drives.
+
+-Taskbar: keep taskbar clean . close the apps which are not in use.
+
+-Bookmarks: Booksmarks also slows down the speed . because system keep running them in background .
+
+-Temporary files : The files that get created by default during web browsing are temporary files . These can also be the cause of slower performance.
+
+while web browsing some websites ask permmision to accept cookies by which these temporary files are created.
+
+-Malvares : keep your system updated and scan for viruses every month atleast.
+
+### Concept of Optimisation:
+Optimization means making something as good, efficient, or effective as possible.
+
+In the computer world, it often refers to:
+
+Speeding up software or hardware so it runs faster or uses fewer resources
+
+-Improving algorithms to solve problems more efficiently
+
+-Reducing energy use in devices or systems
+
+Defragmentation is the process of reorganizing fragmented data on a hard disk so that related pieces are stored close together. This improves file access speed and overall system performance on traditional HDDs. It’s not needed for SSDs, which use a different method called TRIM.
+
+DRIVERS:
+Drivers are software that let the operating system communicate with hardware like printers, keyboards, or graphics cards. Without them, hardware won’t work properly.
+
+ISSUES FACED WHILE USING PRINTER:
+Here’s a compact list of common printer issues and how to fix them:
+
+🖨️ Common Printer Issues & Solutions
+1. Printer Not Printing
+Possible Causes:
+
+Printer not set as default
+
+Print queue stuck
+
+Connectivity issue (USB/Wi-Fi)
+
+Solutions:
+
+Set as default printer (Settings > Devices > Printers)
+
+Restart the Print Spooler service:
+
+Run → services.msc → Print Spooler → Restart
+
+Cancel all print jobs and try again
+
+Reconnect printer (USB/Wi-Fi) or restart router
+
+2. Printer Offline / Not Detected
+Possible Causes:
+
+Disconnected cable or unstable Wi-Fi
+
+Power saving mode
+
+Incorrect printer port
+
+Solutions:
+
+Reconnect or replace USB/Wi-Fi cable
+
+Restart both PC and printer
+
+Uncheck “Use Printer Offline” in printer settings
+
+Update or reinstall printer drivers
+
+3. Paper Jam
+Possible Causes:
+
+Misaligned or overloaded paper tray
+
+Torn or crumpled paper
+
+Solutions:
+
+Open all access doors and gently remove jammed paper
+
+Check for tiny pieces stuck inside
+
+Reload paper properly and align guides
+
+4. Poor Print Quality
+Symptoms:
+
+Streaks, faded text, blurry or smudged prints
+
+Solutions:
+
+Clean print heads (via printer software)
+
+Align cartridges
+
+Replace low or dried-out ink/toner
+
+Use correct paper type and print settings
+
+Blue Screen of Death (BSOD):
+It is used to indicate a system crash, in which the operating system reaches a critical condition where it can no longer operate safely.
+
+Common Causes of BSOD:
+
+Hardware Failures:
+Faulty RAM, hard disk, or other internal components
+Driver Issues:
+Outdated, incompatible, or corrupted device drivers
+Corrupted System Files:
+System file corruption due to improper shutdowns, malware, or failed updates
+Overheating or Power Issues:
+Inadequate cooling or power supply malfunctions
+System Crash Analysis:
+After a BSOD, Windows creates a dump file that records what happened before the crash.
+
+Tools for Analysis:
+Event Viewer:
+Windows tool to check detailed system and crash logs.
+WinDbg:
+Microsoft Debugging Tool for analyzing dump files |
+BIOS/UEFI Settings and POST Errors:
+|BIOS	                     |  UEFI                                   |
+|------------------------------------------------------------------- |
+|Basic Input/Output System | 	Unified Extensible Firmware Interface  |
+
+|Older firmware standard   |	 Modern replacement for BIOS            |
+
+|Keyboard-only navigation 	| Supports mouse and GUI                  |
+
+|Stored in ROM chip       	| Stored in flash memory                  |
+
+### Accessing BIOS/UEFI Settings
+Press F2, F10, DEL, or ESC continously during startup (key depends on manufacturer).
+
+From here, you can:
+
+Change boot order
+
+Enable/disable hardware components
+
+View system info
+
+Reset settings to default (if needed)
 
 
 
