--- a/DAY 1,25-5-2025.md
+++ b/DAY 1,25-5-2025.md
@@ -784,6 +784,408 @@ View system info
 
 Reset settings to default (if needed)
 
+### Day - 6
+### Safe mode:
+Safe Mode is a diagnostic mode in Windows that starts the computer with a minimal set of drivers and services, which makes it easier to find and remove harmful malware and viruses without activating them.
 
+### Types of safe mode:
+
+Safe Mode:
+Used to diagnose and fix basic system issues.
+
+### Safe Mode with Networking:
+Includes network drivers and services. Allowing access to the internet or network drives for troubleshooting.
+
+### Safe Mode with Command Prompt:
+Loads a minimal environment with Command Prompt instead of the normal desktop interface
+
+### Recovery tools:
+The Recovery Drive utility in Windows is a tool designed to back up essential system files needed to restore a PC to its original state.
+It fixes problems that prevent Windows from booting.
+Rolls back system files and settings to an earlier point in time without affecting personal files.
+### OS repair:
+It is used when the OS fails to boot or behaves abnormally.
+
+### Use repair commands:
+
+sfc /scannow – Scans and restores system files.
+DISM /Online /Cleanup-Image /RestoreHealth – Repairs corrupted Windows images.
+
+Bootable USB for repair and system reinstall.
+
+### Virus/Malware Symptoms:
+Slow performance
+
+Frequent crashes or freezes
+
+Slow startup
+
+Unexplained files or folders disappearing
+
+### Unusual network activity:
+Malware can send or receive data, causing increased network activity, especially when your device is idle.
+
+Increased data usage:
+
+Malware can consume more data than usual, especially if it's sending or receiving large amounts of information.
+Browser-Related Symptoms:
+Unwanted pop-up ads
+Browser redirects
+### Basic removal:
+Enter safe mode.
+
+Run Antivirus scan
+
+Delete suspicious Programs via Control Panel.
+
+Clear Temp files.
+
+Reset Web browser setting.
+
+Check startup Programs
+
+Update OS and antivirus.
+
+### Where to Keep Windows Backups?
+Backups are essential for recovery in case of OS failure or data loss.
+
+External Drive: Recommended option for offline, safe backup storage.
+
+Separate Internal Drive (e.g., D:, E:): Better than storing on the system drive (C:), but vulnerable if the whole disk fails.
+
+Cloud Storage: Services like Google Drive, OneDrive, or Dropbox allow automatic syncing and access from anywhere.
+
+### Modern Internet Transmission (Wired Connections):
+RJ45:
+
+RJ45 stands for Registered Jack 45.
+
+It is a standard connector used for Ethernet networking cables.
+
+RJ45 connectors are typically used to connect computers, routers, switches, and other networking devices.
+
+It has 8 pins (8P8C – 8 position, 8 contact) and connects twisted-pair cables like Cat5e, Cat6, Cat6a.
+
+Commonly used for LAN (Local Area Network) connections.
+
+Cat5, Cat6, Cat6e: Categories of twisted-pair cables used in wired networks, offering various speeds and shielding levels.
+
+### How to Make a RJ‐45 Cable:
+Strip the cable to remove 1 inch of the outer sheath.
+
+Untwist and straighten the wires inside of the cable
+
+Arrange the wires into the right order.
+Pin Number	Wire Color (T568B)	Signal
+
+1	White Orange	Transmit + (TX+)
+
+2	Orange	Transmit – (TX–)
+
+3	White Green	Receive + (RX+)
+
+4	Blue	Unused / PoE +
+
+5	White Blue	Unused / PoE +
+
+6	Green	Receive – (RX–)
+
+7	White Brown	Unused / PoE –
+
+8	Brown	Unused / PoE –
+
+Trim the wires into an even line 1⁄2 inch (13 mm) from sheathing
+
+Insert the wires into the RJ-45 connector.
+
+Stick the connector into the crimping part of the tool and squeeze twice.
+
+Remove the cable from the tool and check that all of the pins are down & test the cable.
+
+![alt rj45](rj45.jpg)
+
+### Day - 7
+### Networking Basics
+### Network Definition:
+Any time two or more hosts are connected and can communicate, you have a network.
+
+### 1. Hosts and Traffic:
+Host: Host is any device which sends or receive data traffic over a network. While often a computer, it can also include other networked devices like smartphones, tablets, and IoT (Internet of Things) devices.
+Client: Client is a host that initiates requests for services from another device on the network.
+
+Server: Server is a computer designed to respond to requests from clients. It "serves" the requested data or services to the user.
+
+Traffic: It refers to the data that is transmitted between devices on a network. This can include anything from web pages and emails to video streams and sensor data from IoT devices.
+image
+
+### 2. IP Address (Internet Protocol Address):
+
+An IP address is a unique numerical identifier assigned to every device connected to a computer network that uses the Internet Protocol for communication.
+
+### Protocol: Protocol is a set of rules governing how data is formatted, transmitted, and received between devices.
+
+### Properties:
+Unique: Each device on a network must have a unique IP address.
+
+Universal: IP addresses are a globally recognized standard for network communication.
+### Types:
+.  Public IP Address: Used on the internet, these addresses are globally unique and routable.
+
+. Private IP Address: Used within private networks (e.g., home or school networks), these addresses are not directly routable on the internet.
+
+Dynamic Nature: IP address can change over time, especially for devices on dynamic IP assignments. However, its fundamental properties (uniqueness and universality) remain constant.
+### 3. IPv4 (Internet Protocol Version 4):
+IPv4 is the fourth version of the Internet Protocol.
+
+Length: 32 bits long.
+Address Space: Can theoretically support 2^32 unique addresses.
+
+Notation: Represented in dotted-decimal format, consisting of four octets (groups of 8 bits) separated by dots. Each octet can range from 0 to 255.
+Example: 192.168.1.1
+### Address Structure:
+
+Network ID (Prefix): Defines the network segment to which the device belongs. This part is common for all devices within the same network.
+
+Host ID (Suffix): Uniquely identifies a specific device (host) within that network segment.
+
+Example: An international phone number where the country code represent network and the phone number represents the "host."
+
+
+
+### 4. IPv6 (Internet Protocol Version 6)
+IPv6 is the latest version of the Internet Protocol, designed to address the limitations of IPv4, primarily the exhaustion of available addresses.
+
+. Length: 128 bits long.
+### Address Space: Can support a vastly larger number of addresses, approximately 2^128
+
+.Notation: Represented in hexadecimal, often with colons separating groups of 16 bits.
+
+### 5. Classful Addressing (IPv4)
+It is used to categorizing IP addresses into different classes based on the range of their first octet. There are five classes: A, B, C, D, and E.
+
+Class	Starting Bits	IP Range	Length of Network (Bits)	Reseved bits	Number of Networks	Number of Hosts	Default Subnet Mask	Purpose
+
+| Class | First Octet Range | Starting Bits | Default Subnet Mask | Network Size | Usage                 |
+| ----- | ----------------- | ------------- | ------------------- | ------------ | --------------------- |
+| **A** | 1 – 126           | 0xxxxxxx      | 255.0.0.0           | Very Large   | Large networks        |
+| **B** | 128 – 191         | 10xxxxxx      | 255.255.0.0         | Medium       | Medium networks       |
+| **C** | 192 – 223         | 110xxxxx      | 255.255.255.0       | Small        | Small networks        |
+| **D** | 224 – 239         | 1110xxxx      | N/A (Multicast)     | N/A          | Multicast             |
+| **E** | 240 – 255         | 1111xxxx      | N/A (Experimental)  | N/A          | Reserved/Experimental |
+
+
+Note: As the prefix (network ID) increases, the number of available host IDs decreases
+
+### 6. Broadcast vs. Multicast vs. Unicast
+| Feature     | **Unicast**    | **Broadcast**                 | **Multicast**                   |
+| ----------- | -------------- | ----------------------------- | ------------------------------- |
+| Type        | One-to-One     | One-to-All                    | One-to-Many (Group)             |
+| IP Range    | Normal IPs     | `255.255.255.255` or subnet   | `224.0.0.0` – `239.255.255.255` |
+| Receiver    | Single device  | All devices in the network    | Devices in multicast group      |
+| Example Use | Web browsing   | ARP request                   | Live video conferencing         |
+| Efficiency  | Very Efficient | Inefficient in large networks | Efficient for groups            |
+
+
+### 7. Subnetting:
+Dividing a large network into smaller, more manageable sub-networks. It helps to utilize the network bandwidth in more intelligent way.
+
+Bandwidth: Capacity of network; data transmission rate (e.g., Mbps). Should be maximum.
+
+Latency: Delay in data transmission. Should be minimum.
+
+Host Bits: Denoted by '0's in subnet mask.
+
+Network IP: First IP of a subnet (cannot be assigned to host).
+
+Broadcast IP: Last IP of a subnet (cannot be assigned to host).
+
+### Some other small concepts:
+### MAC (Media Access Control Address)
+
+### Nature: A unique, 12-character hexadecimal (alphanumeric) attribute used to identify individual electronic devices on a network.
+
+### Distinction from IP Address:
+
+MAC Address: Identifies the physical location of a device within a local network. It's like your permanent home address. The manufacturer provides it.
+IP Address: Signifies the device's global or internet-accessible identity. It's more like a temporary vacation rental address, changing depending on your network connection.
+
+### DNS (Domain Name System):
+
+It is a naming system for computers, service etc connected to the Internet or a private network. It translates domain names (www.google.com) into machine-readable IP addresses (172.217.160.142).
+
+### Default Gateway:
+Its a device (typically a router) that acts as a pathway for data to leave a local network and reach other networks, including the internet.
+
+### CIDR (Classless Inter-Domain Routing):
+Modern method for IP allocation and routing, replacing classful addressing with more flexible network sizing (e.g., /24).
+### Types of Cables
+Twisted Pair:
+Types: Shielded (STP) and Unshielded (UTP).
+Use: LANs (Ethernet).
+
+Coaxial:
+Use: TV networks, older computer networks.
+
+Fiber-Optic:
+Use: High-speed networks, long distances (most commonly used today).
+
+.### Numericals:
+For 205.150.65.0/26. Find:
+Subset mask
+
+Number of subsets
+
+Number of hosts
+
+Network IP
+
+Broadcast IP.
+
+### Answer:
+Here /26 is CIDR Class: Class C.
+
+Subnet Mask: 255.255.255.192
+
+In binary: 11111111.11111111.11111111.11000000
+
+.This means 26 bits are used for the network.
+
+Convering 11000000 to decimal = 2^7 + 2^6 = 192
+SO Subset mask is: 255.255.255.192
+
+### Number of Subnets:
+
+26 network bits - 24 default network bits = 2 subnet bits
+Number of subnets = 2^subnet bits = 2^2 = 4
+### 3 Number of Hosts
+Host ID Bits: 32 - 26 = 6
+Number of hosts = 2^host bits − 2 = 2^6 − 2 = 64 − 2 = 62
+
+### Network IP:
+Given IP AND (AND operation) Subset mask:
+205.105.65.0
+
+### Broadcast IP:
+As maximum number of hosts are 62:
+205.105.65.63
+
+### Day 8
+### Networking Commands and Concepts
+
+### DHCP (Dynamic Host Configuration Protocol):
+It is a network protocol that automates IP address assignment to devices on a network.
+### Network Commands:
+ping
+
+. Meaning (Simple): "Hey, are you there?" It's used to check if another computer, server, or website is currently online and reachable from your PC.
+
+. Technical Meaning: ping sends ICMP (Internet Control Message Protocol) Echo Request packets to a target host.
+
+If a reply is received, the host is "alive".
+
+Otherwise, its blocked.
+
+### Syntax: ping website_address
+
+Example: ping google.com
+
+To Exit: Press Ctrl + C in the command prompt/terminal.
+
+### Loopback Address (127.0.0.1):
+
+This IP always refers to "yourself" – your own computer.
+
+It's used to test the network configuration of your local PC.
+
+Example: Like sending a letter to your own house to test if your mailbox works.
+
+
+### traceroute (Windows: tracert)
+It shows the exact path your data takes from your computer to a website or server, revealing every "hop" (router) along the way. Each hop represents a router that the data packet passes through.
+
+Syntax: traceroute <hostname_or_IP_address> (on macOS/Linux) or tracert <hostname_or_IP_address> (on Windows)
+
+*** (Asterisks) in Output: It indicates that the router at that hop did not reply.
+ipconfig (Windows) / ifconfig (macOS/Linux)
+
+### ipconfig (Windows):
+
+Shows the IP address, subnet mask, default gateway, DNS servers, and other network settings that your Windows computer is currently using.
+### ifconfig (macOS/Linux):
+
+Provides:
+|Term	|Represents|
+-----------------
+|inet	|IP address|
+|netmask|	Network range|
+|lo0	|Loopback|
+|broadcast	|Address used to send messages to all devices.|
+### Ethernet:
+It is used to connect devices with a physical cable so that they can communicate or access.
+
+### How it Works:
+Plug one end of an Ethernet cable into your PC's network port.
+
+Plug the other end of the cable into a modem or router.
+
+Your PC can now communicate over the network and access the internet.
+
+### Ethernert vs wifi
+
+| Feature          | **Ethernet**                             | **Wi-Fi**                                          |
+| ---------------- | ---------------------------------------- | -------------------------------------------------- |
+| **Type**         | Wired connection                         | Wireless connection                                |
+| **Speed**        | Generally faster (up to 10 Gbps or more) | Slower than Ethernet (typical: 100 Mbps – 1 Gbps)  |
+| **Stability**    | Very stable (less interference)          | May face interference from walls, signals, etc.    |
+| **Security**     | More secure (physical access needed)     | Less secure (can be hacked if not encrypted)       |
+| **Mobility**     | Limited (requires cables)                | High mobility (can move freely within range)       |
+| **Setup**        | Requires cables and ports                | Easier to set up, no cables needed                 |
+| **Interference** | Not affected by radio signals            | Can be affected by other devices (microwave, etc.) |
+| **Cost**         | May need extra cabling or switches       | Cheaper and simpler for small setups               |
+| **Use Case**     | Offices, gaming, large data transfer     | Homes, mobile devices, casual browsing             |
+
+### compareision of networks
+
+| Feature                 | **PAN** (Personal Area Network)   | **LAN** (Local Area Network)        | **MAN** (Metropolitan Area Network) | **WAN** (Wide Area Network)         |
+| ----------------------- | --------------------------------- | ----------------------------------- | ----------------------------------- | ----------------------------------- |
+| **Full Form**           | Personal Area Network             | Local Area Network                  | Metropolitan Area Network           | Wide Area Network                   |
+| **Coverage Area**       | A few meters (e.g., room, person) | Small area (home, office, building) | City-wide                           | Large area (country, globe)         |
+| **Ownership**           | Owned by a single person          | Usually private (home or company)   | Can be private or public            | Usually public or telecom companies |
+| **Examples**            | Bluetooth, USB tethering          | Wi-Fi in home, office Ethernet      | Cable TV network, city broadband    | Internet, bank networks             |
+| **Speed**               | Low to moderate (10 Mbps–50 Mbps) | High speed (up to 1 Gbps or more)   | Moderate (up to 100 Mbps)           | Varies (100 Mbps – multi-Gbps)      |
+| **Security**            | High (due to proximity)           | Moderate to high                    | Moderate                            | Low (more vulnerable to attacks)    |
+| **Setup Cost**          | Very Low                          | Low to Medium                       | High                                | Very High                           |
+| **Examples of Devices** | Smartphones, wearables            | PCs, routers, switches              | Routers, fiber lines                | Satellites, fiber links, routers    |
+
+### Day 9
+### Introduction to HTML & Web Basics
+### HTML:
+HTML stands for HyperText Markup Language.
+
+It is the standard markup language for creating web pages and web applications.
+
+HTML defines the structure and content of a web page.
+
+### How browsers render it:
+The browser reads the HTML file line by line.
+
+It builds the DOM (Document Object Model) — a tree-like structure of the page.
+
+The browser then displays the structured content visually based on HTML + CSS.
+
+### Structure of an HTML Document
+<!DOCTYPE> declaration defines that this document is an HTML5 document
+
+<html> element is the root element of an HTML page
+ 
+<head> element contains meta information about the HTML page
+ 
+<title> element specifies a title for the HTML page (which is shown in the browser's title bar or in the page's tab)
+ 
+<body> element defines the document's body, and is a container for all the visible contents, such as headings, paragraphs, images, hyperlinks, tables, lists, etc.
+ 
+<h1> element defines a large heading
+ 
+<p> element defines a paragraph
 
 
